# solwall-premium

./: .gitignore  .last_build_id  README.md  flutter_bootstrap.js  index.html  main.dart.js  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/: AssetManifest.bin.json  NOTICES
backend_rust/: Cargo.toml  Dockerfile  README.md
backend_rust/data/: app_state.json
backend_rust/src/: main.rs
lib/: category_screen.dart  home_screen.dart  login_screen.dart  main.dart  payment_screen.dart  profile_screen.dart  signup_screen.dart  wallpaper_preview.dart
lib/data/: category_images.dart  wallpapers.dart
lib/models/: category.dart  theme_button.dart  wallpaper.dart
lib/services/: api_service.dart
lib/utils/: auth.dart
